--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ header {
     padding-right: 15px;
     padding-top: 15px;
     display: block;
+
 }
 .clear {
     clear: both;
@@ -63,7 +64,7 @@ footer {
 }
 #google {
     height: 100px;
-    width: 250px;
+    width: 270px;
     margin-left: 780px;
     margin-top: 180px;
     margin-bottom: 10px;
@@ -85,7 +86,8 @@ footer {
 
 .header-left {
     float: left;
-    opacity: 0.7;
+
+    
 }
 .header-right {
     float: right;
@@ -93,15 +95,56 @@ footer {
 }
 .county {
     margin-left: 15px;
-    color: gray;
+    color: #5f6368
+  
+
 }
 .footer-links {
     float: left;
     margin-left: 1px;
     margin-right: 1px;
     font-size: 15px;
+    color: black;
+    opacity: 0.5;
 }
 .footer-rights {
     float: right;
     margin-right: 15px;
+    color: black;
+    opacity: 0.5;
 }
+#sign-button {
+    background-color: rgb(56, 115, 241);
+    color: white;
+    width: 60px;
+    height: 25px;
+    margin-right: 2px;
+    border-radius: 3px;
+}
+ a:link {
+     text-decoration: none;
+     
+ }
+ #span-lang {
+     text-decoration: underline;
+     color: blue;
+    
+ }
+ #appicon {
+     vertical-align: middle;
+     
+     
+ }
+ .header-links {
+     color: black;
+     opacity: 0.7;
+     margin: 10px;
+ }
+
+ #microphone {
+    position: relative;
+    top: 5px;
+    right: 74px;
+    height: 20px;
+
+ }
