--- a/style.css
+++ b/style.css
@@ -60,14 +60,18 @@ footer {
     border-radius: 25px;
     padding: 3px;
     border: 1px solid lightgray;
-    padding-left: 50px;
+    padding-left: 40px;
 }
 #google {
     height: 100px;
     width: 270px;
-    margin-left: 780px;
+    margin-left: auto;
     margin-top: 180px;
     margin-bottom: 10px;
+    margin-right: auto;
+    box-sizing: border-box;
+    display: block;
+
 }
 #but1 {
     height: 25px;
